--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,9 @@
-/*  your css code here. If applicable */
+th, td{
+	border:1px solid #ccc;
+	border-radius:5px;
+	padding:0.5rem;
+}
+
+tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
